src/test/ui/feature-gate/issue-43106-gating-of-stable.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable                     = "1300"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:10:1
   |
LL | #[stable = "1300"]
   | ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:13:17
   |
LL |     mod inner { #![stable="1300"] }
   |                 ^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:16:5
   |
LL |     #[stable = "1300"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:19:5
   |
LL |     #[stable = "1300"] struct S;
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:22:5
   |
LL |     #[stable = "1300"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:25:5
   |
LL |     #[stable = "1300"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

